# CustomCytonGamma

./: .gitignore  README.md
bash_files/: exo_run.sh
src/cyton_bringup/: CMakeLists.txt  package.xml
src/cyton_bringup/launch/: cyton_bringup.launch
src/cyton_control/: CMakeLists.txt  package.xml
src/cyton_control/include/: cmsgs.h  path_planning.h  robot_control.h
src/cyton_control/launch/: robot_manipulation_real.launch
src/cyton_control/src/: cyton_control_node.cpp  path_planning.cpp  robot_control.cpp
src/cyton_controllers/config/: cyton_controller.yaml
src/cyton_controllers/launch/: start_controller.launch
src/cyton_controllers/scripts/: dynamixel_joint_state_publisher.py  dynamixel_pulses.py
src/cyton_description/: CMakeLists.txt  package.xml
src/cyton_description/meshes/: cyton_link0.stl  cyton_link1.stl  cyton_link2.stl  cyton_link3.stl  cyton_link4.stl  cyton_link5.stl  cyton_link6.stl
src/cyton_description/urdf/: cyton.urdf.xacro  cyton_robot.urdf.xacro
src/cyton_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/cyton_moveit_config/config/: cyton.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
src/cyton_moveit_config/launch/: chomp_planning_pipeline.launch.xml  cyton_moveit_controller_manager.launch.xml  cyton_moveit_planning_execution.launch  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  (+7 more)
(+2 files in other folders)
