<package format="2">
  <name>cyton_bringup</name>
  <version>0.5.0</version>

  <description> cyton_bringup </description>

  <maintainer email="thanos@todo.todo">thanos</maintainer>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>
  <depend>rostest</depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diagnostic_aggregator</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>cyton_1500_controllers</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>