<?xml version="1.0"?>
<package>
  <name>cyton_description</name>
  <version>0.0.0</version>
  <description>The cyton description package</description>

  <maintainer email="amartsop@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <export>
  </export>
</package>
